--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<img src='https://tse2.mm.bing.net/th?id=OIP.o1MelKMxin5GW4-jNjx9qwHaEo&pid=Api&P=0&h=180' alt="dog"/>
 
 </body>
 
